<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dp24"
    android:paddingEnd="@dimen/dp24"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- Login Message -->
    <TextView
        android:id="@+id/tv_login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp96"
        android:text="@string/message_login"
        android:textSize="@dimen/sp20"
        android:textStyle="bold"
        android:textColor="@color/colorBlackMarlin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/message_login"
        />

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp32"
        android:hint="@string/hint_email"
        app:layout_constraintTop_toBottomOf="@id/tv_login_message"
        app:boxStrokeColor="@color/colorPrimary"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:hint="@string/hint_password"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:boxStrokeColor="@color/colorPrimary"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="12"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp32"
        android:paddingTop="@dimen/dp17"
        android:paddingBottom="@dimen/dp15"
        android:text="@string/action_login"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        />

    <!-- Text App Version -->
    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="Version 1.0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>